--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,4 @@
-stages:
-  - build-job
-  - test-job1
-  - test-job2
-  - deploy-prod
-
-include:
-  - local: .test.gitlab-ci.yml
+build-job:
+  stage: build
+  script:
+    - echo "Hello, $GITLAB_USER_LOGIN!"
