Starting with Pipelines

--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -2,8 +2,8 @@ build-job:
   stage: build
   script:
     - echo "Hello, $GITLAB_USER_LOGIN!"
-    - sudo apt-get update && sudo apt-get install -y gnupg software-properties-common curl
-    - curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
-    - sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-    - sudo apt-get update && sudo apt-get install terraform
+    - apt-get update && apt-get install -y gnupg software-properties-common curl
+    - curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add -
+    - apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+    - apt-get update && apt-get install terraform
     - terraform --help
