Starting with Pipelines

--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -1,9 +1,9 @@
 build-job:
   stage: build
   script:
-    - echo "Hello, $GITLAB_USER_LOGIN!"
-    - apt-get update && apt-get install -y gnupg software-properties-common curl
-    - curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add -
-    - apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-    - apt-get update && apt-get install terraform
-    - terraform --help
+    ls -a
+    #- apt-get update && apt-get install -y gnupg software-properties-common curl
+    #- curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add -
+    #- apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+    #- apt-get update && apt-get install terraform
+    #- terraform --help
