--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -1,9 +1,15 @@
-build-job:
-  stage: build
+install-terraform:
+  stage: pre-init
   script:
-    ls -a
-    #- apt-get update && apt-get install -y gnupg software-properties-common curl
-    #- curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add -
-    #- apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-    #- apt-get update && apt-get install terraform
-    #- terraform --help
+    - apt-get update && apt-get install -y gnupg software-properties-common curl
+    - curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add -
+    - apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+    - apt-get update && apt-get install terraform
+
+validate:
+  stage: init
+  script:
+    - terraform init -input=false
+    # - terraform workspace select ${WORKSPACE} || terraform workspace new ${WORKSPACE}
+    - terraform validate -json
+
