Setting up CI/CD

--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -1,10 +1,21 @@
 install-terraform:
   stage: pre-init
+  only:
+    refs:
+      - develop
+  variables:
+    VARS_FILE: vars/apps.tfvars.json
+  before_script:
+    #- cd ${ASSET_NAME}
   script:
-    - apt-get update && apt-get install -y gnupg software-properties-common curl
-    - curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add -
-    - apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-    - apt-get update && apt-get install terraform
+    terraform --help
+    #- apt-get update && apt-get install -y gnupg software-properties-common curl
+    #- curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add -
+    #- apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+    #- apt-get update && apt-get install terraform
+  artifacts:
+    paths:
+      #- ${ASSET_NAME}/${WORKSPACE}.tfplan
 
 validate:
   stage: init
