--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -1,6 +1,4 @@
 install-terraform:
-  image:
-    name: hashicorp/terraform:light
   stage: pre-init
   only:
     refs:
@@ -10,7 +8,7 @@ install-terraform:
   before_script:
     #- cd ${ASSET_NAME}
   script:
-    terraform --help
+    terraform -help
     #- apt-get update && apt-get install -y gnupg software-properties-common curl
     #- curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add -
     #- apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
