--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -13,6 +13,7 @@ job 0:
   before_script:
     - terraform --version
   script:
-    - terraform init -input=false
-    - terraform workspace select ${WORKSPACE} || terraform workspace new ${WORKSPACE}
-    - terraform validate -json
+    - ssh
+    #- terraform init -input=false
+    #- terraform workspace select ${WORKSPACE} || terraform workspace new ${WORKSPACE}
+    #- terraform validate -json
