--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -13,7 +13,8 @@ job 0:
   before_script:
     - terraform --version
   script:
-    - echo $raspberry_host
+    - echo "$VARIABLE_TEST"
+    - echo "$VARIABLE_TEST_FILE"
     #- terraform init -input=false
     #- terraform workspace select ${WORKSPACE} || terraform workspace new ${WORKSPACE}
     #- terraform validate -json
