--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -17,7 +17,6 @@ job 0:
   script:
     - echo "$VARIABLE_TEST"
     - echo "$VARIABLE_TEST_FILE"
-    - terraform providers
     - terraform init -input=false -var-file=${VARS_FILE}
     - terraform workspace select ${WORKSPACE} || terraform workspace new ${WORKSPACE}
-    #- terraform validate -json
+    - terraform validate -json
