--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -47,7 +47,7 @@ job 1:
 
   script:
     - terraform init -input=false
-    - terraform workspace select ${WORKSPACE}
+    - terraform workspace new ${WORKSPACE} || terraform workspace select ${WORKSPACE}
     - terraform plan -input=false -out=${WORKSPACE}.tfplan -var-file=${VARS_FILE}
 
   artifacts:
