Setting up CI/CD

--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -41,6 +41,7 @@ job 1:
   variables:
     WORKSPACE: qual
     VARS_FILE: vars/vars.tfvars.json
+    RASPBERRY_HOST: ${raspberry_host}
 
   before_script:
     - terraform --version
