Setting up CI/CD

--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -41,7 +41,6 @@ job 1:
   variables:
     WORKSPACE: qual
     VARS_FILE: vars/vars.tfvars.json
-    RASPBERRY_HOST: "$raspberry_host"
 
   before_script:
     - terraform --version
@@ -50,7 +49,7 @@ job 1:
   script:
     - terraform init -input=false
     - terraform workspace new ${WORKSPACE} || terraform workspace select ${WORKSPACE}
-    - terraform plan -input=false -out=${WORKSPACE}.tfplan -var-file=${VARS_FILE} -var=${RASPBERRY_HOST}
+    - terraform plan -input=false -out=${WORKSPACE}.tfplan -var-file=${VARS_FILE}
 
   artifacts:
     paths:
