--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -48,12 +48,12 @@ job 1:
     - cd .ssh
     - cp $raspberry_key raspberry_key
     - chmod 0600 raspberry_key
-    - cat $raspbery_config
+    - cat $raspberry_config
 
   script:
     - terraform init -input=false
     - terraform workspace new ${WORKSPACE} || terraform workspace select ${WORKSPACE}
-    - terraform plan -input=false -out=${WORKSPACE}.tfplan -var-file=${VARS_FILE} -var="raspberry_host=$raspberry_host"
+    - terraform plan -input=false -out=${WORKSPACE}.tfplan -var="raspberry_host=$raspberry_host"
 
   artifacts:
     paths:
