--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -47,8 +47,8 @@ job 1:
     - mkdir .ssh
     - cd .ssh
     - cp $raspberry_key raspberry_key
+    - cp $raspberry_config raspberry
     - chmod 0600 raspberry_key
-    - cat $raspberry_config
     - cd ..
 
   script:
