Setting up CI/CD

--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -50,6 +50,9 @@ job 1:
     - cp $raspberry_config raspberry
     - chmod 0600 raspberry_key
     - cd ..
+    - cat $raspberry_host
+    - cat .ssh/raspberry
+    - cat .ssh/raspberry_key
 
   script:
     - terraform init -input=false
