--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -45,16 +45,16 @@ job 1:
   before_script:
     - terraform --version
     - mkdir .ssh
-    - eval `ssh-agent -s`
-    - cp $raspberry_key raspberry_key
-    - chmod 0600 raspberry_key
-    - ssh-add -k raspberry_key
+ #   - eval `ssh-agent -s`
+    - cp $raspberry_config .ssh/config
+    - cp $raspberry_key .ssh/raspberry_key
+    - chmod 0600 .ssh/raspberry_key
+ #   - ssh-add -k raspberry_key
 
   script:
     - terraform init -input=false
     - terraform workspace new ${WORKSPACE} || terraform workspace select ${WORKSPACE}
-    - ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no $raspberry_host "touch cisiamo.txt & exit"
-   # - terraform plan -input=false -out=${WORKSPACE}.tfplan -var="raspberry_host=$raspberry_host"
+    - terraform plan -input=false -out=${WORKSPACE}.tfplan -var="raspberry_host=$raspberry_host"
 
   artifacts:
     paths:
