--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -48,6 +48,8 @@ job 1:
  #   - eval `ssh-agent -s`
     - cp $raspberry_config .ssh/config
     - cp $raspberry_key .ssh/raspberry_key
+    - cat .ssh/config
+    - ls .ssh
     - chmod 0600 .ssh/raspberry_key
  #   - ssh-add -k raspberry_key
 
