--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -45,20 +45,38 @@ job 1:
   before_script:
     - terraform --version
     - mkdir ~/.ssh
- #   - eval `ssh-agent -s`
     - cp $raspberry_config ~/.ssh/config
     - cp $raspberry_key ~/.ssh/raspberry_key
     - cat ~/.ssh/config
     - ls ~/.ssh
     - chmod 0600 ~/.ssh/raspberry_key
- #   - ssh-add -k raspberry_key
 
   script:
     - terraform init -input=false
     - terraform workspace new ${WORKSPACE} || terraform workspace select ${WORKSPACE}
-    #- ssh ssh://raspberry "touch dio.txt && exit"
     - terraform plan -input=false -out=${WORKSPACE}.tfplan -var="raspberry_host=$raspberry_host"
 
   artifacts:
     paths:
       - ${WORKSPACE}.tfplan
+
+job 2:
+  image:
+    name: hashicorp/terraform:light
+    entrypoint:
+      - '/usr/bin/env'
+      - 'PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin'
+      -
+  stage: apply
+
+  only:
+    refs:
+      - test
+      -
+  variables:
+    WORKSPACE: qual
+
+  script:
+    - terraform init -input=false
+    - terraform workspace select ${WORKSPACE}
+    - terraform apply -input=false -auto-approve -compact-warnings ${WORKSPACE}.tfplan
