Adding apply phase

--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -78,5 +78,5 @@ job 2:
 
   script:
     - terraform init -input=false
-    - terraform workspace select ${WORKSPACE}
+    - terraform workspace new ${WORKSPACE} || terraform workspace select ${WORKSPACE}
     - terraform apply -input=false -auto-approve -compact-warnings ${WORKSPACE}.tfplan -var="raspberry_host=$raspberry_host"
