--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -1,9 +1,20 @@
+image: registry.gitlab.com/gitlab-org/terraform-images/stable:latest
+
+variables:
+  TF_ROOT: ${CI_PROJECT_DIR}
+  TF_ADDRESS: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/${CI_PROJECT_NAME}
+
+cache:
+  key: example-production
+  paths:
+    - ${TF_ROOT}/.terraform
+
 job 0:
-  image:
-    name: hashicorp/terraform:light
-    entrypoint:
-      - '/usr/bin/env'
-      - 'PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin'
+  #image:
+    #name: hashicorp/terraform:light
+    #entrypoint:
+      #- '/usr/bin/env'
+      #- 'PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin'
 
   stage: validate
 
@@ -26,6 +37,7 @@ job 0:
     - terraform validate -json
 
 job 1:
+  when: manual
   image:
     name: hashicorp/terraform:light
     entrypoint:
