--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -98,4 +98,4 @@ job 2:
   script:
     #- terraform init -input=false
     #- terraform workspace new ${WORKSPACE} || terraform workspace select ${WORKSPACE}
-    - gitlab-terraform apply -input=false -auto-approve -compact-warnings ${WORKSPACE}.tfplan
+    - gitlab-terraform apply
