--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -64,10 +64,10 @@ apply:
     refs:
       - test
 
-  #before_script:
-   # - mkdir ~/.ssh
-    #- cp $raspberry_config ~/.ssh/config
-    #- cp $raspberry_key ~/.ssh/raspberry_key
+  before_script:
+    - mkdir ~/.ssh
+    - cp $raspberry_config ~/.ssh/config
+    - cp $raspberry_key ~/.ssh/raspberry_key
     #- chmod 0600 ~/.ssh/raspberry_key
 
   script:
