Starting to Split Qual and Prod environments

--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: registry.gitlab.com/gitlab-org/terraform-images/stable:latest
 
 variables:
   TF_ROOT: ${CI_PROJECT_DIR}
-  TF_ADDRESS: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/${CI_PROJECT_NAME}
+  TF_ADDRESS: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/${CI_PROJECT_NAME}/${WORKSPACE}
   WORKSPACE: qual
   VARS_FILE: vars/vars.tfvars.json
 
