--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -1,8 +1,8 @@
 image: registry.gitlab.com/gitlab-org/terraform-images/stable:latest
 
 variables:
-  TF_ROOT: ${CI_PROJECT_DIR}
-  TF_ADDRESS: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/${CI_PROJECT_NAME}/${WORKSPACE}
+  TF_ROOT: ${CI_PROJECT_DIR}/${WORKSPACE}
+  TF_ADDRESS: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/${CI_PROJECT_NAME}
   WORKSPACE: qual
   VARS_FILE: vars/vars.tfvars.json
 
