--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -7,7 +7,7 @@ variables:
   VARS_FILE: vars/vars.tfvars.json
 
 cache:
-  key: ${WORKSPACE}
+  key: example
   paths:
     - ${TF_ROOT}/.terraform
 
