--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: registry.gitlab.com/gitlab-org/terraform-images/stable:latest
 
 variables:
-  TF_ROOT: ${CI_PROJECT_DIR}/${WORKSPACE}
+  TF_ROOT: ${CI_PROJECT_DIR}
   TF_ADDRESS: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/${CI_PROJECT_NAME}
   WORKSPACE: qual
   VARS_FILE: vars/vars.tfvars.json
@@ -54,7 +54,7 @@ plan:
       - ${TF_ROOT}/plan.cache
 
     reports:
-      terraform: ${TF_ROOT}/plan.json
+      terraform: ${TF_ROOT}/${WORKSPACE}/plan.json
 
 ##########################################################
 apply:
