--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: registry.gitlab.com/gitlab-org/terraform-images/stable:latest
 variables:
   TF_ROOT: ${CI_PROJECT_DIR}
   TF_ADDRESS: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/${WORKSPACE}
-  #WORKSPACE: qual
+  WORKSPACE: qual
   VARS_FILE: vars/vars.tfvars.json
 
 cache:
@@ -21,6 +21,8 @@ init:
 
   before_script:
     - terraform --version
+    - terraform --help
+    - terraform workspace new "ciao"
 
   script:
     - gitlab-terraform init -var-file=${VARS_FILE}
