--- a/.master.gitlab-ci.yml
+++ b/.master.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: registry.gitlab.com/gitlab-org/terraform-images/stable:latest
+image: registry.gitlab.com/gitlab-org/terraform-images/stable:lamaster
 
 variables:
   TF_ROOT: ${CI_PROJECT_DIR}
@@ -11,17 +11,69 @@ cache:
   paths:
     - ${TF_ROOT}/.terraform
 
-##########################################################
+###########################################################
 init:
   stage: init
 
   only:
     refs:
-      - test
+      - master
 
   before_script:
     - terraform --version
 
   script:
-    - gitlab-terraform init -var-file=${VARS_FILE}
+    - gitlab-terraform init -var-file=${VARS_FILE} -var="workspace=${WORKSPACE}"
     - gitlab-terraform validate -json
+
+###########################################################
+plan:
+  stage: plan
+
+  dependencies:
+    - init
+
+  only:
+    refs:
+      - master
+
+  before_script:
+    - terraform --version
+    - mkdir ~/.ssh
+    - cp $raspberry_config ~/.ssh/config
+    - cp $raspberry_key ~/.ssh/raspberry_key
+    - chmod 0600 ~/.ssh/raspberry_key
+
+  script:
+    - gitlab-terraform plan -input=false -var="raspberry_host=$raspberry_host" -var="workspace=${WORKSPACE}"
+    - gitlab-terraform plan-json
+
+  artifacts:
+    name: plan
+    paths:
+      - ${TF_ROOT}/plan.cache
+
+    reports:
+      terraform: ${TF_ROOT}/${WORKSPACE}/plan.json
+
+###########################################################
+apply:
+  stage: apply
+
+  dependencies:
+    - plan
+
+  when: manual
+
+  only:
+    refs:
+      - master
+
+  before_script:
+    - mkdir ~/.ssh
+    - cp $raspberry_config ~/.ssh/config
+    - cp $raspberry_key ~/.ssh/raspberry_key
+    - chmod 0600 ~/.ssh/raspberry_key
+
+  script:
+    - gitlab-terraform apply
