--- a/.master.gitlab-ci.yml
+++ b/.master.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: registry.gitlab.com/gitlab-org/terraform-images/stable:lamaster
+image: registry.gitlab.com/gitlab-org/terraform-images/stable:latest
 
 variables:
   TF_ROOT: ${CI_PROJECT_DIR}
