--- a/.main.gitlab-ci.yml
+++ b/.main.gitlab-ci.yml
@@ -3,7 +3,6 @@ image: registry.gitlab.com/gitlab-org/terraform-images/stable:latest
 variables:
   TF_ROOT: ${CI_PROJECT_DIR}
   TF_ADDRESS: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/${WORKSPACE}
-  WORKSPACE: prod
   VARS_FILE: vars/vars.tfvars.json
 
 cache:
@@ -14,6 +13,9 @@ cache:
 ########################################################
 prod:init:
   stage: init
+
+  variables:
+    WORKSPACE: prod
 
   only:
     refs:
@@ -32,6 +34,9 @@ prod:plan:
 
   dependencies:
     - prod:init
+
+  variables:
+    WORKSPACE: prod
 
   only:
     refs:
@@ -62,6 +67,9 @@ prod:apply:
 
   dependencies:
     - prod:plan
+
+  variables:
+    WORKSPACE: prod
 
   when: manual
 
