--- a/.test.gitlab-ci.yml
+++ b/.test.gitlab-ci.yml
@@ -3,7 +3,6 @@ image: registry.gitlab.com/gitlab-org/terraform-images/stable:latest
 variables:
   TF_ROOT: ${CI_PROJECT_DIR}
   TF_ADDRESS: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/${WORKSPACE}
-  WORKSPACE: qual
   VARS_FILE: vars/vars.tfvars.json
 
 cache:
@@ -19,6 +18,9 @@ qual:init:
     refs:
       - test
 
+  variables:
+    WORKSPACE: qual
+
   before_script:
     - terraform --version
 
@@ -32,6 +34,9 @@ qual:plan:
 
   dependencies:
     - qual:init
+
+  variables:
+    WORKSPACE: qual
 
   only:
     refs:
@@ -62,6 +67,9 @@ qual:apply:
 
   dependencies:
     - qual:plan
+
+  variables:
+    WORKSPACE: qual
 
   only:
     refs:
